--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,16 +1,33 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 :root.theme-dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --bg-image: url(../images/cover-image-dark.png);
+  --bg-color: #000028;
+  --subtitle-color: #000028;
+  --title-color: #db00ff;
+  --accent-color: #ff0070;
+  --title-shadow-color: #ff0070;
+  --decorated-color: #ff0070;
+  --section-text-color: var(--accent-color);
+  --button-color: var(--accent-color);
+  --text-color: #f1b2ce;
+  --main-font-family: "IBM Plex Mono", "monospace";
+  --main-font-size: 18px;
+  --main-font-size-title: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  --font-size-standart: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
 }
 
 .theme-dark .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+  --bg-image: url(../images/cover-image-dark.png);
+  --bg-color: #000028;
+  --subtitle-color: #000028;
+  --title-color: #db00ff;
+  --accent-color: #ff0070;
+  --title-shadow-color: #ff0070;
+  --decorated-color: #ff0070;
+  --section-text-color: var(--accent-color);
+  --button-color: var(--accent-color);
+  --text-color: #f1b2ce;
+  --main-font-family: "IBM Plex Mono", "monospace";
+  --main-font-size: 18px;
+  --main-font-size-title: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  --font-size-standart: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
 }
