--- a/styles/light.css
+++ b/styles/light.css
@@ -1,16 +1,37 @@
-/*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 :root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  background-image: url(../images/cover-image-light.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  font-family: var(--main-font-family);
+  color: #353430;
+  font-size: var(--main-font-size);
+  --title-color: #ffc2e6;
+  --accent-color: #ff8dcb;
+  --text-color: #353430;
+  --title-shadow-color: #ff0070;
+  --main-text-color: #353430;
+  --decorated-color: #353430;
+  --section-text-color: var(--main-text-color);
+  --button-color: var(--text-color);
+  --bg-color: #fff1f7;
 }
 
 .theme-light .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+  background-image: url(../images/cover-image-light.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  font-family: var(--main-font-family);
+  color: #353430;
+  font-size: var(--main-font-size);
+  --title-color: #ffc2e6;
+  --accent-color: #ff8dcb;
+  --text-color: #353430;
+  --title-shadow-color: #ff0070;
+  --main-text-color: #353430;
+  --decorated-color: #353430;
+  --section-text-color: var(--main-text-color);
+  --button-color: var(--text-color);
+  --bg-color: #fff1f7;
 }
