--- a/styles/variables.css
+++ b/styles/variables.css
@@ -14,4 +14,10 @@
   --main-font-size: 18px;
   --main-font-size-title: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   --font-size-standart: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem) ;
+  --rec-visibility: visible;
+}
+@media (prefers-color-scheme: dark) {
+  :root {
+    --page-background-image: url("../images/cover-image-dark.png");
+  }
 }
