--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+/* Глобальные стили для проекта, их можно дополнять и менять по желанию */
+
 *,
 *::before,
 *::after {
@@ -37,4 +39,9 @@ a {
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
+}
+
+img {
+  max-inline-size: 100%;
+  block-size: auto;
 }
