--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@
   font-family: var(--page-font-family, "IBM Plex mono", monospace);
   font-size: 18px;
   line-height: 23.4px;
-  background-color: var(--page-background-color, #000028);
+  background-color: var(--page-bg-color, #000028);
   background-image: var(--page-background-image, url("../images/cover-image.png"));
   background-position: center;
   background-size: cover;
@@ -48,7 +48,7 @@
 }
 
 .header__theme-menu-button:hover {
-  border-color: var(--secondary-color-o-40, #ff007040);
+  border-color: var(--secondary-color-2, #ff007040);
 }
 
 .header__theme-menu-button:focus {
