--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,13 +1,10 @@
 :root.theme-dark {
-  --text-color: var(--color-pink-2, #f1b2ce);
-  --brand-color: var(--color-purple-1, #db00ff);
-  --secondary-color: var(--color-purple-2, #ff0070);
-  --secondary-color-o-40: var(--color-purple-2-o-40, #ff007040);
-  --accent-color: var(--color-purple-2, #ff0070);
-  --highlight-color: var(--color-black-1, #000028);
-
-  --page-background-color: var(--color-black-1, #000028);
+  --text-color: #f1b2ce;
+  --brand-color:  #db00ff;
+  --secondary-color:  #ff0070;
+  --secondary-color-2:  #ff007040;
+  --highlight-color: #000028;
+  --page-background-color: #000028;
   --page-background-image: url("../images/cover-image-dark.png");
-
   --rec-visibility: visible;
 }
