--- a/styles/dark.css
+++ b/styles/dark.css
@@ -2,7 +2,7 @@
   --text-color: #f1b2ce;
   --brand-color:  #db00ff;
   --secondary-color:  #ff0070;
-  --secondary-color-2:  #ff007040;
+  --secondary-color-alloy:  #ff007040;
   --highlight-color: #000028;
   --page-background-color: #000028;
   --page-background-image: url("../images/cover-image-dark.png");
