--- a/styles/light.css
+++ b/styles/light.css
@@ -4,7 +4,7 @@
   --brand-color:  #ffc2e6;
   --highlight-color: #353430;
   --secondary-color: #353430;
-  --secondary-color-2:  #35343040;
+  --secondary-color-dark:  #35343040;
   --page-background-color:  #fff1f7;
   --page-background-image: url("../images/cover-image-light.png");
   --rec-decor-visibility: hidden;
