--- a/styles/light.css
+++ b/styles/light.css
@@ -5,8 +5,20 @@
   --highlight-color: #353430;
   --secondary-color: #353430;
   --secondary-color-dark:  #35343040;
-  --page-background-color:  #fff1f7;
-  --page-background-image: url("../images/cover-image-light.png");
-  --rec-decor-visibility: hidden;
+  --page-bg-color:  #fff1f7;
+  --page-bg-image: url("../images/cover-image-light.png");
+  --rec-visibility: hidden;
 }
-
+@media (prefers-color-scheme: light) {
+  :root {
+    --text-color:  #353430;
+    --accent-color:  #ff8dcb;
+    --brand-color:  #ffc2e6;
+    --highlight-color: #353430;
+    --secondary-color: #353430;
+    --secondary-color-dark:  #35343040;
+    --page-bg-color:  #fff1f7;
+    --page-bg-image: url("../images/cover-image-light.png");
+    --rec-decor-visibility: hidden;
+  }
+}
