--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,14 @@
+
+/*Я отправил Вам старую незакомиченную версию :) */
+/* С наступающим <3 */
+
 .page {
   color: var(--text-color, #f1b2ce);
   font-family: var(--page-font-family, "IBM Plex mono", monospace);
   font-size: 18px;
   line-height: 23.4px;
   background-color: var(--page-bg-color, #000028);
-  background-image: var(--page-background-image, url("../images/cover-image.png"));
+  background-image: var(--page-bg-image, url("../images/cover-image.png"));
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
@@ -56,7 +60,7 @@
 }
 
 .header__theme-menu-button:focus-visible {
-  outline-color: currentColor;
+  border-block-end-color: currentColor;
 }
 
 .header__title {
@@ -141,7 +145,9 @@
   color: var(--highlight-color, #000028);
   background: var(--accent-color, #ff0070);
 }
-
+.title-sub{
+  font-weight: 400;
+}
 .main {
   display: grid;
   gap: 50px;
