--- a/styles/variables.css
+++ b/styles/variables.css
@@ -4,7 +4,7 @@
   --bg-color: #000028;
   --subtitle-color: #000028;
   --title-color: #db00ff;
-  --accent-color: #ff0070;
+  --accent-color: #FF0070;
   --title-shadow-color: #ff0070;
   --decorated-color: #ff0070;
   --section-text-color: var(--accent-color);
