--- a/styles/light.css
+++ b/styles/light.css
@@ -8,6 +8,7 @@
   --page-bg-color:  #fff1f7;
   --page-bg-image: url("../images/cover-image-light.png");
   --rec-visibility: hidden;
+  --link-hover-color: #353430;
 }
 @media (prefers-color-scheme: light) {
   :root {
@@ -20,5 +21,6 @@
     --page-bg-color:  #fff1f7;
     --page-bg-image: url("../images/cover-image-light.png");
     --rec-visibility: hidden;
+    --link-hover-color: #353430;
   }
 }
