--- a/styles/style.css
+++ b/styles/style.css
@@ -199,7 +199,7 @@
 
 .link:hover {
   text-decoration: none;
-  border-bottom: 1px solid #000;
+  border-bottom: 1px solid var(--link-hover-color, #353430);
 }
 
 .link:focus {
