--- a/styles/variables.css
+++ b/styles/variables.css
@@ -15,6 +15,7 @@
   --main-font-size-title: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   --font-size-standart: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem) ;
   --rec-visibility: visible;
+  --link-hover-color: #353430;
 }
 @media (prefers-color-scheme: dark) {
   :root {
